# austrata

./: .flake8  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GA_SERVER_TEST_PLAN.md  NGIS_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: nightly-ga-health.yml  publish.yml  tests.yml
austrata/: __init__.py  client.py  groundwater_client.py  ngis_client.py
austrata/application/: __init__.py  fetch_boreholes.py  fetch_hydrogeology.py  fetch_ngis.py
austrata/domain/: __init__.py  borehole.py  coercion.py  construction.py  hydrogeology.py  region.py  stratigraphy.py
austrata/infrastructure/: arcgis_rest_client.py  dataset_cache.py  feature_mapper.py  http.py  ngis_download.py  ngis_mapper.py  ngis_optimiser.py  ngis_sources.py  ogc_wfs_client.py
austrata/ports/: data_source.py
data/ngis/: NGIS_SCHEMA.md
examples/: ABSUC_sample.csv  README.md  lower_murrumbidgee_boreholes.py  lower_murrumbidgee_earth_material.py  lower_murrumbidgee_logs.py  lower_murrumbidgee_stratigraphy.py  quickstart.py
examples/nsw-example/: nsw-example.py  nsw_stratigraphy_map.py  stratigraphy_map.py
examples/state-strata/: state-strata.py
gadata/: client.py
gadata/application/: fetch_boreholes.py
gadata/domain/: borehole.py  hydrogeology.py  region.py
gadata/infrastructure/: ogc_wfs_client.py
scripts/: ga_healthcheck.py  probe_ga_services.py
src/gadata/: __init__.py
src/gadata/application/: fetch_hydrogeology.py
src/gadata/domain/: __init__.py  stratigraphy.py
src/gadata/infrastructure/: __init__.py  arcgis_rest_client.py  dataset_cache.py  feature_mapper.py  http.py
src/gadata/ports/: __init__.py  cache.py  data_source.py
tests/: ga_live_support.py  test_arcgis_client.py  test_arcgis_live.py  test_borehole.py  test_client.py  test_client_live.py  test_construction.py  test_dataset_cache.py  test_fetch_ngis.py  test_ga_server_live.py  test_groundwater_client.py  test_http.py  test_intervals.py  test_ngis_client.py  test_ngis_download.py  test_ngis_live.py  test_ngis_optimiser.py  test_region.py  test_wfs_client.py  test_wfs_live.py
