[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "austrata"
version = "0.1.0"
description = "Access Geoscience Australia borehole and hydrogeology data with a provenance-aware local cache"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sia Ghelichkhan", email = "siavash.ghelichkhan@anu.edu.au"},
]
keywords = [
    "geoscience australia",
    "boreholes",
    "hydrogeology",
    "stratigraphy",
    "geospatial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
    "pyogrio>=0.7",
    "pyarrow>=14.0",
    "requests>=2.28",
    "tenacity>=8.2",
    "platformdirs>=3.0",
    "filelock>=3.12",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "vcrpy>=5.0",
    "responses>=0.23",
    "flake8>=5.0",
    "black>=22.0",
    "mypy>=0.990",
    "types-requests",
]

[project.urls]
Repository = "https://github.com/g-adopt/austrata"
Issues = "https://github.com/g-adopt/austrata/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["austrata*"]

[tool.setuptools.package-data]
austrata = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib -m 'not live'"
markers = [
    "live: marks tests that hit the real Geoscience Australia services (deselect with '-m \"not live\"')",
    "smoke: fast nightly GA-server health subset (run with '-m \"live and smoke\"')",
    "contract: fuller weekly GA-server schema/contract subset (run with '-m \"live and contract\"')",
    "heavy: heavy/on-demand GA-server checks, skipped by default (run with '-m \"live and heavy\"')",
]

[tool.flake8]
ignore = ["E501", "W503"]
max-line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# geopandas/shapely/pyogrio ship partial or no stubs; we type our own surface
# and lean on tests for the third-party boundaries.
